<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Cristiano_Siuuu">Cristiano Ronaldo dos Santos Aveiro es un futbolista portugués. Juega como delantero y su equipo actual es el Al-Nassr F. C. de la Liga Profesional Saudí.</string>
    <string name="el_bicho">El bicho</string>
    <string name="cristiano_ronaldo">Cristiano Ronaldo</string>
    <string name="ver_en_wikipedia">Ver en Wikipedia</string>
    <string name="illojuan">Illojuan</string>
    <string name="juan">Juan Alberto García Gámez, conocido en el mundo digital como IlloJuan o LMDShow, es un streamer y youtuber español.</string>
    <string name="Nano">Fernando Alonso Díaz es un piloto de automovilismo español, galardonado como Premio Principe de Astúrias en 2005.</string>
    <string name="leo_messi">Leo Messi</string>
    <string name="messi">Lionel Andrés Messi Cuccittini, conocido como Leo Messi, es un futbolista argentino que juega como delantero o centrocampista.</string>
    <string name="mas">+</string>
</resources>