<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScrollingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_bottom_scrollview"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:layout_marginTop="@dimen/margin_top">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:cardCornerRadius="@dimen/radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@string/el_bicho"
                        android:scaleType="centerCrop"
                        android:background="@drawable/rounded_image"
                        android:clipToOutline="true"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/_0"
                    />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cristiano_ronaldo"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/imageView1"
                        app:layout_constraintBottom_toTopOf="@id/textView2"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Cristiano_Siuuu"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/textView1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_en_wikipedia"
                        android:textSize="@dimen/text_size"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:layout_marginBottom="@dimen/margin_bottom_botton"
                        app:layout_constraintTop_toBottomOf="@id/textView2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:cardCornerRadius="@dimen/radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@string/el_bicho"
                        android:scaleType="centerCrop"
                        android:background="@drawable/rounded_image"
                        android:clipToOutline="true"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/_023518112542_1"
                        />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/illojuan"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/imageView2"
                        app:layout_constraintBottom_toTopOf="@id/textView4"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/juan"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/textView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_en_wikipedia"
                        android:textSize="@dimen/text_size"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:layout_marginBottom="@dimen/margin_bottom_botton"
                        app:layout_constraintTop_toBottomOf="@id/textView4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:cardCornerRadius="@dimen/radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@string/el_bicho"
                        android:scaleType="centerCrop"
                        android:background="@drawable/rounded_image"
                        android:clipToOutline="true"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/fernando_alonso_aston_martin_r"
                        />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fernando Alonso"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/imageView3"
                        app:layout_constraintBottom_toTopOf="@id/textView6"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Nano"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/textView5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_en_wikipedia"
                        android:textSize="@dimen/text_size"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:layout_marginBottom="@dimen/margin_bottom_botton"
                        app:layout_constraintTop_toBottomOf="@id/textView6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:cardCornerRadius="@dimen/radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@string/leo_messi"
                        android:scaleType="centerCrop"
                        android:background="@drawable/rounded_image"
                        android:clipToOutline="true"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/leomessi20092010_pic_fcb_arsenal62"
                        />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leo_messi"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/imageView4"
                        app:layout_constraintBottom_toTopOf="@id/textView9"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/messi"
                        android:textColor="@color/black"
                        android:paddingBottom="@dimen/padding"
                        android:layout_marginStart="@dimen/margin_start"
                        app:layout_constraintTop_toBottomOf="@id/textView8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_en_wikipedia"
                        android:textSize="@dimen/text_size"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:layout_marginBottom="@dimen/margin_bottom_botton"
                        app:layout_constraintTop_toBottomOf="@id/textView9"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottomappbar"
        android:layout_gravity="bottom">
    </com.google.android.material.bottomappbar.BottomAppBar>

    <Button
        android:id="@+id/plus"
        android:layout_width="@dimen/width_botton"
        android:layout_height="@dimen/height_botton"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_bottom_botton2"
        android:layout_marginStart="@dimen/margin_start_botton"
        android:background="@drawable/rounded_image"
        android:text="@string/mas" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>